<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home_bottom_nav_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_calendar"
        android:enabled="true"
        android:icon="@drawable/ic_calendar"
        android:title="@string/calendar_bottom_nav_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_match"
        android:enabled="true"
        android:icon="@drawable/ic_match"
        android:title="@string/match_bottom_nav_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_chat"
        android:enabled="true"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat_bottom_nav_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile_bottom_nav_title"
        app:showAsAction="ifRoom" />
</menu>

